feat: adding api to get status of service
